css/catalog.css
/* ... */
@media (max-width: 575.98px) {
  .nav {
    border-bottom: 0.1rem solid #eaeaea;
  }
  .nav .nav-open {
    height: 5.5rem;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
  }
}

.breadcrumb {
  height: 14.8rem;
  background-color: #f8f3f4;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.breadcrumb__h1 {
  color: #f16d7f;
  font-size: 2.4rem;
  font-weight: 700;
  line-height: 2rem;
  text-transform: uppercase;
}

.breadcrumb__nav {
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 2rem;
  text-transform: uppercase;
}

.breadcrumb__nav-link {
  color: #636363;
  font-weight: 400;
}

.breadcrumb__nav-link:not(:last-child)::after {
  content: "/";
  padding: 0 0.05rem;
}

.breadcrumb__nav-link:last-child {
  font-weight: 700;
  color: #f16d7f;
}

@media (max-width: 992px) {
  .breadcrumb__h1 {
    font-size: 2.5rem;
  }
  .breadcrumb__nav {
    font-size: 1.8rem;
  }
}

@media (max-width: 576px) {
  .breadcrumb {
    display: none;
  }
}

.wrap {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  padding-top: 5.9rem;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.wrap .aside-nav .aside-menu {
  width: 24.3rem;
  cursor: pointer;
  margin-bottom: 1.8rem;
}

.wrap .aside-nav .aside-menu > input[type="checkbox"]:checked + label {
  color: #f16d7f;
}

.wrap .aside-nav .aside-menu > input[type="checkbox"]:checked + label::after {
  content: "\f0d8";
  color: #f16d7f;
}

.wrap .aside-nav .aside-menu > input[type="checkbox"]:checked ~ .aside-menu__drop-menu {
  height: 46rem;
}

.wrap .aside-nav .aside-menu__heading {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  color: #6f6e6e;
  font-size: 1.4rem;
  font-weight: 700;
  text-transform: uppercase;
  border-bottom: 0.1rem solid #ebebeb;
  border-left: 0.5rem solid #ef5b70;
  padding: 1.2rem 1.1rem 1.5rem;
  outline: none;
  position: relative;
  -webkit-transition-duration: 0.5s;
          transition-duration: 0.5s;
}

.wrap .aside-nav .aside-menu__heading::after {
  content: "\f0d7";
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  position: absolute;
  right: 0.6rem;
  color: #6f6e6e;
  font-size: 1.6rem;
  text-transform: uppercase;
}

.wrap .aside-nav .aside-menu__heading:hover {
  color: #f16d7f;
  -webkit-transition-duration: 0.3s;
          transition-duration: 0.3s;
}

.wrap .aside-nav .aside-menu__drop-menu {
  overflow: hidden;
  -webkit-transition-duration: 0.5s;
          transition-duration: 0.5s;
  height: 0;
}

.wrap .aside-nav .aside-menu__nav {
  padding: 2.2rem 0 0 1.2rem;
}

.wrap .aside-nav .aside-menu__nav-list {
  font-size: 1.4rem;
  font-weight: 400;
  line-height: 3.3rem;
}

.wrap .aside-nav .aside-menu__nav-item {
  list-style-type: none;
}

.wrap .aside-nav .aside-menu__nav-link {
  color: #6f6e6e;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  display: inline-block;
  position: relative;
}

.wrap .aside-nav .aside-menu__nav-link::after {
  content: "";
  width: 0;
  height: 0.1rem;
  position: absolute;
  bottom: 0;
  left: 50%;
  background-color: #f16d7f;
  -webkit-transition-duration: 0.4s;
          transition-duration: 0.4s;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.wrap .aside-nav .aside-menu__nav-link:hover {
  color: #f16d7f;
}

.wrap .aside-nav .aside-menu__nav-link:hover::after {
  width: 100%;
  left: 0;
  height: 0.1rem;
}

.wrap .main {
  padding-left: 4.9rem;
}

.wrap .main .catalog-form {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
}

.wrap .main .catalog-form__trending {
  -ms-flex-preferred-size: 32%;
      flex-basis: 32%;
}

.wrap .main .catalog-form__trending-inputs {
  max-width: 22rem;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
}

.wrap .main .catalog-form__trending-label {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  color: #6f6e6e;
  font-size: 1.4rem;
  font-weight: 400;
}

.wrap .main .catalog-form__trending-label:not(:last-child)::after {
  content: "|";
  color: #dfdfdf;
  margin: 0 1.2rem;
}

.wrap .main .catalog-form__trending-input:checked + span {
  color: #f16d7f;
}

.wrap .main .catalog-form__heading {
  color: #6f6e6e;
  font-size: 1.4rem;
  font-weight: 700;
  text-transform: uppercase;
  margin-bottom: 2.5rem;
}

.wrap .main .catalog-form__size {
  -ms-flex-preferred-size: 32%;
      flex-basis: 32%;
}

.wrap .main .catalog-form__size-inputs {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
}

.wrap .main .catalog-form__size-label {
  color: #6f6e6e;
  font-family: "Open Sans";
  font-size: 1.4rem;
  font-weight: 400;
  text-transform: uppercase;
  -ms-flex-preferred-size: 25%;
      flex-basis: 25%;
  margin-bottom: 1rem;
  padding-right: 0.5rem;
}

.wrap .main .catalog-form__size-input {
  margin-right: 1rem;
  -moz-appearance: none;
  -webkit-appearance: none;
  -o-appearance: none;
  outline: none;
  content: none;
  outline: none;
  -webkit-transition-duration: 0.3s;
          transition-duration: 0.3s;
}
/* ... */

